# EpiBridge

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d73975c664f_initial_schema.py  4a9e8f3c7b5f_add_terms_of_service_and_acceptance.py  9a8b7c6d5e4f_add_rejection_provenance.py  initial_schema.py
backend/app/: cli.py  main.py
backend/app/ai/: __init__.py  base.py  context.py  ollama.py
backend/app/auth/: firebase.py  router.py
backend/app/builders/: __init__.py  conda.py
backend/app/core/: config.py  logging.py
backend/app/db/: migration.py
backend/app/execution/: base.py  docker.py
backend/app/models/: __init__.py  ai_bundle_review.py  analysis_bundle.py  audit_event.py  build_request.py  capability.py  data_resource.py  execution_request.py  output_set.py  platform_setting.py  project.py  session.py  terms_acceptance.py  terms_of_service.py
backend/app/providers/: base.py  csv.py  duckdb.py  excel.py  parquet.py
backend/app/schemas/: ai_bundle_review.py  analysis_bundle.py  execution_environment.py  execution_request.py  output_set.py  terms.py  user.py
backend/app/services/: ai_review_service.py  analysis_bundle_service.py  auth_framework_seeder.py  bundle_store.py  demo_seeder.py  execution_environment_service.py  execution_request_service.py  session_service.py  terms_service.py
backend/app/workflow/: bundle.py  output_set.py
backend/builder_templates/conda/: Dockerfile
backend/tests/: conftest.py
docs/: api.md  (+2 more)
(+92 files in other folders)
